Fix the color of the buttons to give improved contrast for reading the text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,16 @@ body {
 }
 
 h1 {
-    font-size: 25px;
     margin: 10px;
+    border: solid;
+    border-radius: 10px;
+    font-size: 30px;
+    color: #f5f5f5;
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 18px;
+    letter-spacing: 1.5px;
     margin: 5px;
 }
 
@@ -54,9 +58,10 @@ h2 {
     height: 50px;
     max-height: 90%;
     letter-spacing: 1.5px;
-    background-color: white;
-    color: black;
+    background-color: #f5f5f5;
+    color: #3a3a3a;
     cursor: pointer;
+    font-size: 18px;
 }
 
 .btns:hover:not([disabled]) {
